# gnome-nvidia-extension-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  SECURITY.md  build.rs  codecov.yml  install_schemas.sh  style.css
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ROADMAP.md  TODO.md  async.md  pull_request_template.md  subclassing.md  system_tray.md
src/: com.gtk_d.NvidiaMonitorRust.gschema.xml.old  lib.rs
src/custom_button/: imp.rs  mod.rs
src/formatter/: imp.rs  mod.rs
src/gpu_page/: imp.rs  mod.rs
src/mainwindow/: imp.rs  mod.rs
src/modificationwindow/: imp.rs  mod.rs
src/processor/: imp.rs  mod.rs
src/property/: imp.rs  mod.rs
src/provider/: imp.rs  mod.rs
src/resources/: gpu-page.ui  main-window.ui  modification-window.ui  resources.gresource.xml  rust-logo.png.license  settings-window.ui
src/settingswindow/: imp.rs  mod.rs
src/subprocess/: mod.rs
tests/: integration_tests_1.rs
